# saguarodb

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml
crates/buffer/: Cargo.toml
crates/buffer/src/: lib.rs  loader.rs  page.rs  pool.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: catalog_overlay.rs  change_set.rs  dependencies.rs  lib.rs  memory.rs  serialize.rs  system.rs  truncate_overlay.rs
crates/common/: Cargo.toml
crates/common/src/: array.rs  bytea.rs  cancel.rs  catalog_change.rs  checked_bytes.rs  checkpoint.rs  concurrency.rs  context.rs  copy.rs  datetime.rs  durable.rs  error.rs  float.rs  flush.rs  functions.rs  ids.rs  interval.rs  lib.rs  locking.rs  mvcc.rs  numeric.rs  pg_type.rs  row.rs  schema.rs  statistics.rs  stored_expression.rs  stored_query.rs  uuid.rs  value.rs
crates/common/src/mvcc/: conflict.rs  mod.rs  reclaim.rs  tests.rs  visibility.rs
crates/compress/: Cargo.toml
crates/compress/src/: codec.rs  dict.rs  lib.rs  registry.rs
crates/control/: Cargo.toml
crates/control/src/: control.rs  lib.rs  manifest.rs
crates/executor/: Cargo.toml
crates/executor/src/: copy.rs  expr.rs  instrumentation.rs  lib.rs  query.rs  referential.rs  result.rs  rewrite.rs  subquery.rs  system.rs  test_support.rs
crates/executor/src/ops/: aggregate.rs  apply.rs  distinct.rs  dml.rs  filter.rs  join.rs  limit.rs  lock_rows.rs  mod.rs  projection.rs  scan.rs  set_op.rs  sort.rs  spill_row.rs  system_scan.rs  table_function.rs  values.rs  window.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  convert.rs  lib.rs
crates/parser/src/convert/: ddl.rs  dml.rs  expr.rs  mod.rs  query.rs
crates/planner/: Cargo.toml
crates/planner/src/: binder.rs  bound.rs  estimate.rs  explain.rs  expr.rs  hoist.rs  lib.rs  logical.rs  params.rs  physical.rs  rewrite.rs  simplify.rs  stored_expression.rs  stored_query.rs
crates/planner/src/binder/: dml.rs  expr.rs  mod.rs  query.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: array.rs  codec.rs  lib.rs  messages.rs  state.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  cancel.rs  checkpoint.rs  config.rs  connection.rs  lib.rs  lock_manager.rs  main.rs  maintenance.rs  query.rs  recovery.rs  registry.rs  session_registry.rs  shutdown.rs  ssi_manager.rs  tls.rs
crates/server/src/connection/: copy.rs  extended.rs  mod.rs  simple.rs  tests.rs  timeout.rs
crates/server/src/query/: alter.rs  analyze.rs  copy.rs  cursor.rs  exec.rs  gucs.rs  mod.rs  stream.rs  truncate.rs  txn.rs  vacuum.rs
crates/server/tests/: analyze.rs  compression.rs  copy.rs  ddl_constraints.rs  deadlock.rs  e2e_sql.rs  foreign_key_dependencies.rs  foreign_key_dml.rs  foreign_key_hardening.rs  foreign_keys_alter.rs  foreign_keys_create.rs  guc.rs  locking_select.rs  recovery.rs  serializable.rs  streaming.rs  system_catalogs.rs  table_locks.rs  transactions.rs  truncate.rs  vacuum.rs
crates/server/tests/support/: mod.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: control.rs  lib.rs  manager.rs  manifest.rs  writer.rs
crates/spill/: Cargo.toml
crates/spill/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: btree.rs  codec.rs  engine.rs  heap.rs  index_page.rs  lib.rs  page.rs  recovery.rs  redo.rs  toast.rs  traits.rs
crates/storage/src/engine/: compression_tests.rs  concurrent_writers_tests.rs  conflict_wait_test_support.rs  dml.rs  index.rs  mod.rs  recovery.rs  referential.rs  structural_latch_tests.rs  truncate_tests.rs  vacuum.rs  vacuum_tests.rs  visibility.rs  visibility_tests.rs
crates/wal/: Cargo.toml
crates/wal/src/: clog.rs  clog_file.rs  codec.rs  file.rs  lib.rs  record.rs  segment.rs
docs/specs/: compression.md  copy.md  cursors.md  deadlock.md  foreign-keys.md  mvcc.md  overview.md  rust-style.md  savepoints.md  sequences.md  ssi.md  statistics.md  streaming.md  subqueries.md  table-locks.md  window-functions.md
docs/specs/crates/: README.md  buffer.md  catalog.md  common.md  compress.md  control.md  executor.md  parser.md  planner.md  protocol.md  server.md  snapshot.md  spill.md  storage.md  wal.md
