[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/buffer",
  "crates/catalog",
  "crates/parser",
  "crates/planner",
  "crates/executor",
  "crates/protocol",
  "crates/storage",
  "crates/wal",
  "crates/control",
  "crates/server",
]

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
bytes = "1"
crc32fast = "1"
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.56"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
