[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/spill",
  "crates/compress",
  "crates/buffer",
  "crates/catalog",
  "crates/parser",
  "crates/planner",
  "crates/executor",
  "crates/protocol",
  "crates/storage",
  "crates/wal",
  "crates/control",
  "crates/server",
]

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
bytes = "1"
crc32fast = "1"
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }
rcgen = "0.14"
rust_decimal = { version = "1", default-features = false, features = ["std", "serde"] }
rustix = { version = "1", features = ["fs"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.56"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
zstd = "0.13"
