[package]
name = "saguarodb-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
parking_lot = { workspace = true, features = ["arc_lock", "send_guard"] }
rust_decimal = { workspace = true }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
