[package]
name = "saguarodb-compress"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
common = { package = "saguarodb-common", path = "../common" }
crc32fast.workspace = true
parking_lot.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
