[package]
name = "saguarodb-executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
catalog = { package = "saguarodb-catalog", path = "../catalog" }
common = { package = "saguarodb-common", path = "../common" }
planner = { package = "saguarodb-planner", path = "../planner" }
storage = { package = "saguarodb-storage", path = "../storage" }

[dev-dependencies]
parser = { package = "saguarodb-parser", path = "../parser" }
