[package]
name = "saguarodb-planner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
catalog = { package = "saguarodb-catalog", path = "../catalog" }
common = { package = "saguarodb-common", path = "../common" }
parser = { package = "saguarodb-parser", path = "../parser" }
