[package]
name = "saguarodb-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
buffer = { package = "saguarodb-buffer", path = "../buffer" }
common = { package = "saguarodb-common", path = "../common" }
wal = { package = "saguarodb-wal", path = "../wal" }
crc32fast.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
