[package]
name = "saguarodb-wal"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { package = "saguarodb-common", path = "../common" }
crc32fast.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
